--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    if: "!contains(github.event.head_commit.message, '[bot sync]')"  # ⛔ Skip bot sync commits
     runs-on: ubuntu-latest
 
     steps:
