--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Static Site to EC2
+name: Deploy Static Site to EC2 and Force-Sync Merged Branch
 
 on:
   push:
@@ -12,7 +12,9 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up SSH
       run: |
@@ -27,3 +29,43 @@ jobs:
           cd /var/www/tefinitely.com/html &&
           git pull origin main
         '
+
+    # 🔍 Find which branch was merged into main
+    - name: Identify merged branch
+      id: find_branch
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const { data: prs } = await github.rest.pulls.list({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            state: "closed",
+            base: "main",
+            sort: "updated",
+            direction: "desc",
+            per_page: 1
+          });
+          const branch = prs.length ? prs[0].head.ref : null;
+          core.setOutput("branch", branch);
+          if (branch) {
+            console.log(`✅ Found merged branch: ${branch}`);
+          } else {
+            console.log("⚠️ No recently merged branch found.");
+          }
+
+    # 🔁 Force-sync that branch to match main exactly
+    - name: Force-sync merged branch with main
+      if: steps.find_branch.outputs.branch != ''
+      env:
+        SOURCE_BRANCH: ${{ steps.find_branch.outputs.branch }}
+      run: |
+        echo "🔄 Force-syncing branch: $SOURCE_BRANCH"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
+        git fetch origin
+        git checkout $SOURCE_BRANCH || exit 0
+        git reset --hard origin/main
+        git push origin $SOURCE_BRANCH --force
+
+        echo "✅ Branch '$SOURCE_BRANCH' now matches 'main' exactly."
